# milestone_ii

./: .gitignore  MIMIC-IV-ED Data Description.txt  MIMIC-IV-ED-Data.md  README.md  Readme.md  Timeline.md  model.py  pipeline.py  pyproject.toml  requirements.txt  setup.py
Archived/src/: ndc.py
mimic_clustering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: pca_transformer.joblib  tokenizer_config.json  xgboost_model.json
notebooks/: =4.2.0  Data Prepration.ipynb  gmm.ipynb  hdbscan.ipynb  playground.ipynb
src/: .env  DatePreprocessor.py  gcp_utils.py  mimicdf.py  notebook_setup.py
supervised/: .gitignore  Readme.md  failure_analysis.ipynb  logistic_regression_analysis.ipynb  logistic_regression_experiment.md  logistic_regression_experiments.ipynb  logistic_regression_model.py  pyproject.toml  requirements.txt
supervised/.logs/: data_processing.txt
supervised/experiments/: ensemble.py  logisticregression.ipynb  pca.ipynb  randomforest.ipynb  randomforest_feature_importance.ipynb  supervised_learning.ipynb  supervised_learning.py  validation.ipynb  validation.py  xgboost.ipynb
supervised/experiments/ensemble/: best_config.json  cv_results.json  ensemble_model.pkl  lr_evaluation.md  lr_model.pkl  lr_preprocessor.pkl  lr_scaler.pkl  model_comparison.md  rf_encoder.pkl  rf_evaluation.md  rf_scaler.pkl  tuned_ensemble_evaluation.md  xgb_evaluation.md  xgb_model.pkl  xgb_pca.pkl  xgb_scaler.pkl
supervised/utils/: check_gpu.py  complexity.py  data_handler.py  data_utils.py  embeddings.py  evaluation.py  helper_functions.py  lr_model.py  pain_utils.py
(+16 files in other folders)
