[project]
name = "supervised"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.4",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "xgboost>=2.1.4",
]
